cmake_minimum_required(VERSION 3.16)

project(opengl-es-image-process C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_RPATH Release)
endif()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

add_library(GLESv2_ADRENO SHARED IMPORTED)
set_target_properties(GLESv2_ADRENO PROPERTIES IMPORTED_LOCATION ${PROJECT_SOURCE_DIR}/third_party/opengl/libGLESv2_adreno.so)

add_subdirectory(src)
