add_executable(01_render_to_image 01_render_to_image.cpp)
target_link_libraries(01_render_to_image PRIVATE lodepng egl_wrapper timer GLESv3)

add_executable(02_render_to_image_pbo 02_render_to_image_pbo.cpp)
target_link_libraries(02_render_to_image_pbo PRIVATE lodepng egl_wrapper timer GLESv3)

add_executable(03_memcpy_benchmark 03_memcpy_benchmark.cpp)
target_link_libraries(03_memcpy_benchmark PRIVATE timer)

add_executable(04_ahardwarebuffer 04_ahardwarebuffer.cpp)
target_link_libraries(04_ahardwarebuffer PRIVATE android lodepng egl_wrapper timer GLESv3)

add_executable(05_ahardwarebuffer_input 05_ahardwarebuffer_input.cpp)
target_link_libraries(05_ahardwarebuffer_input PRIVATE android lodepng egl_wrapper timer GLESv3)

add_executable(06_ahardwarebuffer_optimized 06_ahardwarebuffer_optimized.cpp)
target_link_libraries(06_ahardwarebuffer_optimized PRIVATE android lodepng egl_wrapper timer GLESv3)